--- a/assets/sass/menu.scss
+++ b/assets/sass/menu.scss
@@ -1,3 +1,4 @@
+/* variables */
 :root {
     --color-primary: #9356DC;
     --color-primary-light: #F4EDFE;
@@ -11,6 +12,7 @@
     --color-white: #fff;
     --color-grey: #808080;
 }
+/* endregion */
 
 body {
     background-color: var(--color-background-light);
@@ -18,6 +20,7 @@ body {
     font-size: 14px;
 }
 
+/* Header */
 .header {
     display: flex;
     width: 100%;
@@ -34,11 +37,14 @@ body {
     font-weight: 900;
     z-index: 1;
 }
+/* endregion */
 
+/* menu */
 .restaurant__image {
     height: 250px;
     width: 100%;
     position: relative;
+    z-index: -1;
     object-fit: cover;
 }
 
@@ -47,11 +53,7 @@ body {
     justify-content: space-between;
     padding: 30px 0 0 0;
     background: var(--color-background-light);
-    border-radius: 40px;
-    position:absolute;
-    top: 280px;
-    z-index: 1;
-    width:100%
+    width:100%;
 }
 
 .page-title__like {
@@ -62,7 +64,13 @@ body {
 }
 
 .menu {
-    padding: 30px 0 0 0;
+    border-top-left-radius: 40px;
+    border-top-right-radius: 40px;
+    overflow: hidden;
+    background-color: var(--color-background-light);
+    max-width: 1500px;
+    margin: 0 auto;
+    margin-top: -70px;
 }
 
 .plate__link {
@@ -78,6 +86,11 @@ body {
     font-family: 'Shrikhand';
     font-size: 24px;
     padding: 0 0 0 20px;
+}
+
+.menu__group {
+    display: flex;
+    flex-direction: column;
 }
 
 .page__subtitle {
@@ -100,6 +113,8 @@ body {
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
     padding: 0 0 0 10px;
     height: 65px;
+    max-width: 400px;
+    min-width: 340px;
 }
 
 .page__plate-title {
@@ -116,6 +131,9 @@ body {
 
 .plate__description {
     font-size: 16px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 
 .plate__price {
@@ -123,6 +141,9 @@ body {
     font-weight: bold;
     padding: 0 20px 10px 0;
 }
+/* endregion */
+
+/* button */
 
 .main__button {
     width: 180px;
@@ -135,13 +156,26 @@ body {
     align-items: center;
     padding:60px 0 80px 0;
 }
+/* endregion */
 
-/* responsive tablet */
+/* responsive tablet & desktop */
 @media all and (min-width: 768px) {
-    .page-title {
+    .menu__group {
+        flex-direction: row;
+        justify-content: space-between;
+        flex-wrap: wrap;
+    }
 
-        border-radius: 0;
+    .menu__list {
+        width: 33%;
+        flex-basis: content;
+    }
 
+    .restaurant__image {
+        max-width: 100%;
+        height: 300px;
+        width : 100%
     }
 
 }
+/* endregion */
