--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -31,7 +31,6 @@ body {
   color: var(--color-black);
   position: absolute;
   display: block;
-  padding: 20px 0px 0 -20px;
   margin: 20px 0 0 20px;
   cursor: pointer;
   font-weight: 900;
@@ -117,6 +116,7 @@ body {
   flex-grow: 1;
 }
 
+/* Check animation */
 .plate__check {
   display: flex;
   justify-content: center;
@@ -139,6 +139,7 @@ body {
   transition: transform 700ms;
 }
 
+/* endregion  animation*/
 .page__plate-title {
   font-size: 18px;
   font-weight: bold;
@@ -164,7 +165,7 @@ body {
   padding: 0 20px 10px 0;
 }
 
-/* endregion */
+/* endregion menu */
 /* button */
 .main__button {
   width: 180px;
