--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -24,7 +24,7 @@
 }
 
 .footer__title {
-  font-family: "Shrikhand";
+  font-family: "Shrikhand", cursive;
   font-size: 18px;
   padding: 25px 0px 5px 20px;
 }
