--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10,6 +10,7 @@
   --color-background-darker: #353535;
   --color-black: #000;
   --color-white: #fff;
+  --color-white-opacity: #fffa;
   --color-grey: #808080;
 }
 
@@ -24,7 +25,7 @@ body {
   z-index: 10000;
   height: 100%;
   width: 100%;
-  background-color: #fffa;
+  background-color: var(--color-white-opacity);
   animation: hide 0s ease-in 1.5s forwards;
 }
 
@@ -141,7 +142,7 @@ body {
   position: relative;
   box-shadow: rgba(100, 100, 100, 0.2) 0px 3px 4px 3px;
   transform: scale(1);
-  transition: transform 400ms;
+  transition: transform 200ms;
 }
 
 .main__button:hover {
