--- a/assets/sass/home.scss
+++ b/assets/sass/home.scss
@@ -161,6 +161,12 @@
 .restaurants__list__item {
     text-decoration: none;
     color: var(--color-black);
+    transform: scale(1);
+    transition: transform 200ms;
+}
+
+.restaurants__list__item:hover {
+    transform: scale(1.05);
 }
 
 .item__card {
