--- a/assets/sass/home.scss
+++ b/assets/sass/home.scss
@@ -163,10 +163,12 @@
     color: var(--color-black);
     transform: scale(1);
     transition: transform 200ms;
+    margin: 0 5px 0 0;
 }
 
 .restaurants__list__item:hover {
     transform: scale(1.05);
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
 .item__card {
