--- a/assets/sass/styles.scss
+++ b/assets/sass/styles.scss
@@ -141,7 +141,8 @@ body {
 }
 
 .main__button:hover {
-    transform: scale(1.05);
+    filter: brightness(1.15);
+    box-shadow: rgba(100, 100, 111, 0.5) 0px 7px 29px 0px;
 }
 
 .button__link {
@@ -150,34 +151,44 @@ body {
 /*#endregion */
 
 /*#region heart animation */
+
 .icon__heart-regular {
-    font-size: 22px;
+    font-size: 24px;
     color: var(--color-black);
     position: absolute;
     transition: 0.6s;
 }
 
 .icon__heart-solid {
-    background: -webkit-linear-gradient(var(--color-primary),var(--color-secondary));
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
     cursor: pointer;
     font-weight: 900;
     position:absolute;
-    font-size: 22px;
+    font-size: 24px;
+    background: -webkit-linear-gradient(var(--color-primary),var(--color-secondary));
+    transition: 1s ease-in-out;
     opacity: 0;
-    transition: 0.6s;
+    transition-property: top;
 }
 
 .icon__heart-solid:hover {
-    opacity: 1;
-}
-
-.icon__heart-regular:hover {
     background: -webkit-linear-gradient(var(--color-primary),var(--color-secondary));
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    cursor: pointer;
+    transition: 1s;
+    opacity: 1;
 }
+
+.icon__heart-solid:after{
+  top:100%;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  transition: 1s;
+  opacity: 1;
+}
+
+.icon__heart-solid:hover:after{
+  top:0%;
+}
+
 /*#endregion */
 
