--- a/assets/sass/styles.scss
+++ b/assets/sass/styles.scss
@@ -1,160 +1,161 @@
 /* variables */
-:root {
-    --color-primary: #9356DC;
-    --color-primary-light: #F4EDFE;
-    --color-secondary: #FF79DA;
-    --color-tertiary: #99E2D0;
-    --color-tertiary-dark:#398164;
-    --color-background-light: #f6f6f6;
-    --color-background-dark: #eaeaea;
-    --color-background-darker: #353535;
-    --color-black: #000;
-    --color-white: #fff;
-    --color-white-opacity: #fffa;
-    --color-grey: #808080;
-}
+$color-primary: #9356dc;
+$color-primary-light: #f4edfe;
+$color-secondary: #ff79da;
+$color-tertiary: #99e2d0;
+$color-tertiary-dark: #398164;
+$color-background-light: #f6f6f6;
+$color-background-dark: #eaeaea;
+$color-background-darker: #353535;
+$color-black: #000;
+$color-white: #fff;
+$color-white-opacity: #fffa;
+$color-grey: #808080;
 
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: "Roboto", sans-serif;
     font-size: 10px;
 }
 
-/* Loader */
 .loader-container {
     position: fixed;
     z-index: 10000;
-    height: 100%;
-    width: 100%;
-    background-color: var(--color-white-opacity);
+    height: 100vh;
+    width: 100vw;
+    background-color: $color-white-opacity;
     animation: hide 0s ease-in 1.5s forwards;
+
+    .loader {
+        position: fixed;
+        height: 100%;
+        width: 52px;
+        top: 50%;
+        left: calc(50% - 52px / 2);
+
+        .loader-element {
+            position: absolute;
+            width: 13px;
+            height: 13px;
+            border-radius: 50%;
+            animation-timing-function: cubic-bezier(0, 1, 1, 0);
+
+            &:nth-child(1) {
+                left: 8px;
+                animation: loader-element-left 0.6s infinite;
+                background-color: $color-primary;
+            }
+
+            &:nth-child(2) {
+                left: 8px;
+                animation: loader-element-middle 0.6s infinite;
+                background-color: $color-secondary;
+            }
+
+            &:nth-child(3) {
+                left: 32px;
+                animation: loader-element-middle 0.6s infinite;
+                background-color: $color-tertiary;
+            }
+
+            &:nth-child(4) {
+                left: 56px;
+                animation: loader-element-right 0.6s infinite;
+                background-color: $color-tertiary-dark;
+            }
+
+            @keyframes loader-element-left {
+                0% {
+                    transform: scale(0);
+                }
+                100% {
+                    transform: scale(1);
+                }
+            }
+
+            @keyframes loader-element-right {
+                0% {
+                    transform: scale(1);
+                }
+                100% {
+                    transform: scale(0);
+                }
+            }
+
+            @keyframes loader-element-middle {
+                0% {
+                    transform: translate(0, 0);
+                }
+                100% {
+                    transform: translate(24px, 0);
+                }
+            }
+
+            @keyframes hide {
+                100% {
+                    width: 0;
+                    height: 0;
+                    z-index: -1;
+                    visibility: hidden;
+                    pointer-events: none;
+                }
+            }
+        }
+    }
 }
 
-.loader {
-    position: fixed;
-    height: 100%;
-    width: 52px;
-    top: 50%;
-    left: calc(50% - 52px / 2);
-  }
-  .loader-element {
-    position: absolute;
-    width: 13px;
-    height: 13px;
-    border-radius: 50%;
-    animation-timing-function: cubic-bezier(0, 1, 1, 0);
-  }
-  .loader-element:nth-child(1) {
-    left: 8px;
-    animation: loader-element1 0.6s infinite;
-    background-color: var(--color-primary);
-  }
-  .loader-element:nth-child(2) {
-    left: 8px;
-    animation: loader-element2 0.6s infinite;
-    background-color: var(--color-secondary);
-  }
-  .loader-element:nth-child(3) {
-    left: 32px;
-    animation: loader-element2 0.6s infinite;
-    background-color: var(--color-tertiary);
-  }
-  .loader-element:nth-child(4) {
-    left: 56px;
-    animation: loader-element3 0.6s infinite;
-    background-color: var(--color-tertiary-dark);
-  }
-  @keyframes loader-element1 {
-    0% {
-      transform: scale(0);
-    }
-    100% {
-      transform: scale(1);
-    }
-  }
-  @keyframes loader-element3 {
-    0% {
-      transform: scale(1);
-    }
-    100% {
-      transform: scale(0);
-    }
-  }
-  @keyframes loader-element2 {
-    0% {
-      transform: translate(0, 0);
-    }
-    100% {
-      transform: translate(24px, 0);
-    }
-  }
-  @keyframes hide {
-    100% {
-      width: 0;
-      height: 0;
-      visibility: hidden;
-    }
-  }
-/* endregion */
-
-/*#region logo */
 .logo {
-    margin:auto;
+    margin: auto;
     display: block;
     align-items: center;
     box-shadow: rgba(100, 100, 111, 0.2) 2px 2px 2px 2px;
     position: relative;
     width: 100%;
     text-align: center;
+
+    .logo__image {
+        padding: 20px 0px 10px 0px;
+        width: 160px;
+        height: auto;
+        align-items: center;
+    }
 }
 
-.logo__image {
-    padding: 20px 0px 10px 0px;
-    width: 160px;
-    height: auto;
-    align-items: center;
-}
-/*#endregion */
-
-/*#region link */
 .link {
     text-decoration: none;
-}
-/*#endregion */
-
-/*#region button */
-.main__button {
-    font-size: 16px;
-    font-weight: 500;
-    color: var(--color-white);
-    background: linear-gradient(-190deg,var(--color-secondary),var(--color-primary));
-    border: none;
-    border-radius: 30px;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    display: flex;
-    height: 48px;
-    position: relative;
-    box-shadow: rgba(100, 100, 100, 0.2) 0px 3px 4px 3px;
-    transform: scale(1);
-    transition: transform 200ms;
-}
-
-.main__button:hover {
-    filter: brightness(1.15);
-    box-shadow: rgba(100, 100, 111, 0.5) 0px 7px 29px 0px;
 }
 
 .button__link {
     text-decoration: none;
-}
-/*#endregion */
 
-/*#region heart animation */
+    .main__button {
+        font-size: 16px;
+        font-weight: 500;
+        color: $color-white;
+        background: linear-gradient(-190deg, $color-secondary, $color-primary);
+        border: none;
+        border-radius: 30px;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        display: flex;
+        height: 48px;
+        position: relative;
+        box-shadow: rgba(100, 100, 100, 0.2) 0px 3px 4px 3px;
+        transform: scale(1);
+        transition: transform 200ms;
+
+        &:hover {
+            filter: brightness(1.15);
+            box-shadow: rgba(100, 100, 111, 0.5) 0px 7px 29px 0px;
+        }
+    }
+}
+
+/* heart animation */
 
 .icon__heart-regular {
     font-size: 24px;
-    color: var(--color-black);
+    color: $color-black;
     position: absolute;
     transition: 0.6s;
 }
@@ -162,9 +163,9 @@ body {
 .icon__heart-solid {
     cursor: pointer;
     font-weight: 900;
-    position:absolute;
+    position: absolute;
     font-size: 24px;
-    background: -webkit-linear-gradient(var(--color-primary),var(--color-secondary));
+    background: -webkit-linear-gradient($color-primary, $color-secondary);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     transition: 1s ease-in-out;
@@ -174,6 +175,3 @@ body {
 .icon__heart-solid:hover {
     opacity: 1;
 }
-
-/*#endregion */
-
