--- a/assets/sass/footer.scss
+++ b/assets/sass/footer.scss
@@ -2,11 +2,16 @@
 
 .footer {
     background-color: $color-background-darker;
-    width: 100%;
+    width: 100vw;
     height: 200px;
     color: $color-white;
     position: absolute;
     padding: 0 0 30px 0;
+
+    .footer__block {
+        max-width: 1560px;
+        margin: 0 auto;
+    }
 
     .footer__title {
         font-family: 'Shrikhand', cursive;
@@ -26,6 +31,10 @@
             .footer__link {
                 text-decoration: none;
                 color: $color-white;
+
+                &:hover {
+                    text-decoration: underline;
+                }
 
                 .icon__eat {
                     font-size: 16px;
