--- a/assets/sass/home.scss
+++ b/assets/sass/home.scss
@@ -5,7 +5,7 @@ $circle-width: 25px;
 /* Header */
 .header__position {
     height: 40px;
-    width: 100%;
+    width: 100vw;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -78,59 +78,64 @@ $circle-width: 25px;
         }
     }
 
-    .step__title {
-        font-size: 24px;
-        font-weight: bold;
-        padding: 30px 0px 10px 20px;
-    }
-
-    .step__choice {
-        display: block;
-        border-color: $color-black;
-        border-radius: 20px;
-        position: relative;
-        margin: 25px;
-        background: $color-background-light;
-        padding: 25px;
-        box-shadow: rgba(100, 100, 100, 0.2) 0px 3px 4px 3px;
-        max-width: 350px;
-
-        .step__circle {
-            width: $circle-width;
-            background: $color-primary;
-            height: 25px;
-            text-align: center;
-            font-size: 14px;
-            color: $color-white;
-            border-radius: 100%;
-            position: absolute;
-            z-index: 1;
-            line-height: 25px;
-            left: calc($circle-width / 2 - 25px);
+    .step__block {
+        max-width: 1560px;
+        margin: 0 auto;
+        
+        .step__title {
+            font-size: 24px;
+            font-weight: bold;
+            padding: 30px 0px 10px 20px;
         }
 
-        &.step__choice__purple {
-            background: $color-primary-light;
-            color: $color-primary;
-        }
-
-        .step__choice-title {
-            display: flex;
-            font-size: 16px;
-            font-weight: 500;
-            color: $color-black;
-            margin: 0 20px 0 0;
-            padding: 0 0 0 50px;
-        }
-
-        .icon__mobile,
-        .icon__menu,
-        .icon__store {
-            font-size: 20px;
-            color: $color-grey;
-            padding: 0 5px 0 5px;
-            position: absolute;
+        .step__choice {
             display: block;
+            border-color: $color-black;
+            border-radius: 20px;
+            position: relative;
+            margin: 25px;
+            background: $color-background-light;
+            padding: 25px;
+            box-shadow: rgba(100, 100, 100, 0.2) 0px 3px 4px 3px;
+            max-width: 350px;
+
+            .step__circle {
+                width: $circle-width;
+                background: $color-primary;
+                height: 25px;
+                text-align: center;
+                font-size: 14px;
+                color: $color-white;
+                border-radius: 100%;
+                position: absolute;
+                z-index: 1;
+                line-height: 25px;
+                left: calc($circle-width / 2 - 25px);
+            }
+
+            &.step__choice__purple {
+                background: $color-primary-light;
+                color: $color-primary;
+            }
+
+            .step__choice-title {
+                display: flex;
+                font-size: 16px;
+                font-weight: 500;
+                color: $color-black;
+                margin: 0 20px 0 0;
+                padding: 0 0 0 50px;
+            }
+
+            .icon__mobile,
+            .icon__menu,
+            .icon__store {
+                font-size: 20px;
+                color: $color-grey;
+                padding: 0 5px 0 5px;
+                position: absolute;
+                display: block;
+            }
         }
     }
 }
@@ -141,99 +146,110 @@ $circle-width: 25px;
     background-color: $color-background-light;
     padding: 0 0 50px 0;
 
-    .restaurants__title {
-        font-size: 24px;
-        font-weight: bold;
-        padding: 50px 0px 10px 20px;
-    }
+    .restaurants__block {
+        max-width: 1560px;
+        margin: 0 auto;
 
-    .restaurants__list {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        row-gap: 20px;
-
-        @media all and (min-width: 768px) {
-            flex-direction: row;
-            flex-wrap: wrap;
-            justify-content: space-between;
-            margin: 0 20px;
-        }
-    }
-
-    .restaurants__list__item {
-        text-decoration: none;
-        color: $color-black;
-        transform: scale(1);
-        transition: transform 200ms;
-        margin: 0 5px 0 0;
-
-        &:hover {
-            transform: scale(1.05);
-            box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+        .restaurants__title {
+            font-size: 24px;
+            font-weight: bold;
+            padding: 50px 0px 10px 20px;
         }
 
-        .item__card {
+        .restaurants__list {
             display: flex;
             flex-direction: column;
-            gap: 10px;
-            background-color: $color-white;
-            border-radius: 10px;
-            box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-            width: 320px;
+            align-items: center;
+            row-gap: 20px;
 
-            .restaurants__card-photo {
-                position: relative;
-                display: flex;
-                width: auto;
-                height: 170px;
+            @media all and (min-width: 768px) {
+                flex-direction: row;
+                flex-wrap: wrap;
+                justify-content: space-between;
+                margin: 0 20px;
+            }
+        }
 
-                .restaurants__photo {
-                    padding: 0;
-                    width: 100%;
-                    height: auto;
-                    object-position: 50% 65%;
-                    border-radius: 15px 15px 0 0;
-                    object-fit: cover;
-                }
+        .restaurants__list__item {
+            text-decoration: none;
+            color: $color-black;
+            transform: scale(1);
+            transition: transform 200ms;
+            margin: 0 5px 0 0;
 
-                .restaurants__photo-new {
-                    position: absolute;
-                    top: 20px;
-                    right: 10px;
-                    background: $color-tertiary;
-                    color: $color-tertiary-dark;
-                    font-size: 14px;
-                    font-weight: bold;
-                    border-radius: 2px;
-                    padding: 8px;
-                }
+            &:hover {
+                transform: scale(1.05);
+                box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
             }
 
-            .restaurants__card-block {
+            .item__card {
                 display: flex;
-                justify-content: space-between;
-                padding: 0 5px 10px 5px;
+                flex-direction: column;
+                gap: 10px;
+                background-color: $color-white;
+                border-radius: 10px;
+                box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+                width: 320px;
 
-                .restaurants__card-title {
-                    display: block;
-                    font-weight: bold;
-                    font-size: 18px;
-                    margin: 0 0 8px 0;
+                &:hover .restaurants__card-photo .restaurants__photo {
+                    transform: scale(1.2);
                 }
 
-                .restaurants__card-description {
-                    display: block;
-                    font-size: 16px;
-                    font-weight: 300;
-                    margin: 0 0 8px 0;
-                }
-
-                .restaurants__card-ranking {
-                    display: flex;
-                    align-items: center;
-                    padding: 0px 40px 0px 0px;
+                .restaurants__card-photo {
                     position: relative;
+                    display: flex;
+                    width: auto;
+                    height: 170px;
+                    overflow: hidden;
+
+                    .restaurants__photo {
+                        padding: 0;
+                        width: 100%;
+                        height: auto;
+                        object-position: 50% 65%;
+                        border-radius: 15px 15px 0 0;
+                        object-fit: cover;
+                        transition: 0.3s;
+                    }
+
+                    .restaurants__photo-new {
+                        position: absolute;
+                        top: 20px;
+                        right: 10px;
+                        background: $color-tertiary;
+                        color: $color-tertiary-dark;
+                        font-size: 14px;
+                        font-weight: bold;
+                        border-radius: 2px;
+                        padding: 8px;
+                    }
+                }
+
+                .restaurants__card-block {
+                    display: flex;
+                    justify-content: space-between;
+                    padding: 0 5px 10px 5px;
+
+                    .restaurants__card-title {
+                        display: block;
+                        font-weight: bold;
+                        font-size: 18px;
+                        margin: 0 0 8px 0;
+                    }
+
+                    .restaurants__card-description {
+                        display: block;
+                        font-size: 16px;
+                        font-weight: 300;
+                        margin: 0 0 8px 0;
+                    }
+
+                    .restaurants__card-ranking {
+                        display: flex;
+                        align-items: center;
+                        padding: 0px 40px 0px 0px;
+                        position: relative;
+                    }
                 }
             }
         }
