--- a/assets/sass/styles.scss
+++ b/assets/sass/styles.scss
@@ -27,7 +27,7 @@ body {
 
     .loader {
         position: fixed;
-        height: 100%;
+        height: 100vh;
         width: 52px;
         top: 50%;
         left: calc(50% - 52px / 2);
@@ -166,6 +166,7 @@ body {
     position: absolute;
     font-size: 24px;
     background: -webkit-linear-gradient($color-primary, $color-secondary);
+    background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     transition: 1s ease-in-out;
