Heart test and 7-1 system

--- a/assets/sass/components/_loader.scss
+++ b/assets/sass/components/_loader.scss
@@ -1,21 +1,4 @@
-/* variables */
-$color-primary: #9356dc;
-$color-primary-light: #f4edfe;
-$color-secondary: #ff79da;
-$color-tertiary: #99e2d0;
-$color-tertiary-dark: #398164;
-$color-background-light: #f6f6f6;
-$color-background-dark: #eaeaea;
-$color-background-darker: #353535;
-$color-black: #000;
-$color-white: #fff;
-$color-white-opacity: #fffa;
-$color-grey: #808080;
-
-body {
-    font-family: "Roboto", sans-serif;
-    font-size: 10px;
-}
+@import "../utils/_variables";
 
 .loader-container {
     position: fixed;
@@ -101,78 +84,4 @@ body {
             }
         }
     }
-}
-
-.logo {
-    margin: auto;
-    display: block;
-    align-items: center;
-    box-shadow: rgba(100, 100, 111, 0.2) 2px 2px 2px 2px;
-    position: relative;
-    width: 100%;
-    text-align: center;
-
-    .logo__image {
-        padding: 20px 0px 10px 0px;
-        width: 160px;
-        height: auto;
-        align-items: center;
-    }
-}
-
-.link {
-    text-decoration: none;
-}
-
-.button__link {
-    text-decoration: none;
-
-    .main__button {
-        font-size: 16px;
-        font-weight: 500;
-        color: $color-white;
-        background: linear-gradient(-190deg, $color-secondary, $color-primary);
-        border: none;
-        border-radius: 30px;
-        align-items: center;
-        justify-content: center;
-        text-align: center;
-        display: flex;
-        height: 48px;
-        position: relative;
-        box-shadow: rgba(100, 100, 100, 0.2) 0px 3px 4px 3px;
-        transform: scale(1);
-        transition: transform 200ms;
-
-        &:hover {
-            filter: brightness(1.15);
-            box-shadow: rgba(100, 100, 111, 0.5) 0px 7px 29px 0px;
-        }
-    }
-}
-
-/* heart animation */
-
-.icon__heart-regular {
-    font-size: 24px;
-    color: $color-black;
-    position: absolute;
-    transition: 0.6s;
-}
-
-.icon__heart-solid {
-    cursor: pointer;
-    font-weight: 900;
-    position: absolute;
-    font-size: 24px;
-    background: -webkit-linear-gradient($color-primary, $color-secondary);
-    background-clip: text;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    transition: 1s ease-in-out;
-    opacity: 0;
-}
-
-.icon__heart-solid:hover {
-    opacity: 1;
 }
