--- a/assets/sass/utils/_variables.scss
+++ b/assets/sass/utils/_variables.scss
@@ -1,13 +1,14 @@
-/* variables */
-$color-primary: #9356dc;
-$color-primary-light: #f4edfe;
-$color-secondary: #ff79da;
-$color-tertiary: #99e2d0;
-$color-tertiary-dark: #398164;
-$color-background-light: #f6f6f6;
-$color-background-dark: #eaeaea;
-$color-background-darker: #353535;
-$color-black: #000;
-$color-white: #fff;
-$color-white-opacity: #fffa;
-$color-grey: #808080;
+/* variables
+:root {
+    --primary-light: #8abdff;
+    --primary: #6d5dfc;
+    --primary-dark: #5b0eeb;
+    
+    --white: #FFFFFF;
+    --greyLight-1: #E4EBF5;
+    --greyLight-2: #c8d0e7;
+    --greyLight-3: #bec8e4;
+    --greyDark: #9baacf;
+  }
+
+  */
