--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -570,27 +570,24 @@ body {
   margin-top: -70px;
 }
 .menu .page-title {
+  position: relative;
   display: flex;
   justify-content: space-between;
   padding: 30px 0 0 0;
+  margin: 30px 0 0 0;
   background: #f6f6f6;
   width: 100%;
 }
-@media all and (min-width: 385px) {
-  .menu .page-title {
-    position: relative;
-    margin: 30px 0 0 0;
-  }
-}
 .menu .page-title .page-title__name {
+  position: absolute;
   font-family: "Shrikhand", cursive;
   font-size: 24px;
   padding: 0 0 0 20px;
   top: 0;
+  max-width: 80%;
 }
-@media all and (min-width: 385px) {
+@media all and (min-width: 550px) {
   .menu .page-title .page-title__name {
-    position: absolute;
     left: 50%;
     transform: translateX(-50%);
   }
@@ -599,13 +596,8 @@ body {
   display: flex;
   align-items: center;
   padding: 0px 50px 0px 0px;
-  position: relative;
-}
-@media all and (min-width: 385px) {
-  .menu .page-title .page-title__like {
-    position: absolute;
-    right: 2%;
-  }
+  position: absolute;
+  right: 2%;
 }
 .menu .menu__group {
   display: flex;
