--- a/assets/sass/pages/_menu.scss
+++ b/assets/sass/pages/_menu.scss
@@ -53,25 +53,23 @@ body {
     margin-top: -70px;
 
     .page-title {
+        position: relative;
         display: flex;
         justify-content: space-between;
         padding: 30px 0 0 0;
+        margin: 30px 0 0 0;
         background: $color-background-light;
         width: 100%;
 
-        @media all and (min-width: 385px) {
-            position: relative;
-            margin: 30px 0 0 0;
-        }
-
         .page-title__name {
+            position: absolute;
             font-family: "Shrikhand", cursive;
             font-size: 24px;
             padding: 0 0 0 20px;
             top: 0;
+            max-width: 80%;
 
-            @media all and (min-width: 385px) {
-                position: absolute;
+            @media all and (min-width: 550px) {
                 left: 50%;
                 transform: translateX(-50%);
             }
@@ -81,12 +79,8 @@ body {
             display: flex;
             align-items: center;
             padding: 0px 50px 0px 0px;
-            position: relative;
-
-            @media all and (min-width: 385px) {
-                position: absolute;
-                right: 2%;
-            }
+            position: absolute;
+            right: 2%;
         }
     }
 
